--- a/Sunduk.PWA/wwwroot/index.html
+++ b/Sunduk.PWA/wwwroot/index.html
@@ -7,13 +7,18 @@
     <title>Sunduk</title>
     <base href="/" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" rel="stylesheet">
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
 </head>
 
 <body>
-    <div id="app"><h3>Загрузка...</h3></div>
+    <app>
+        <div id="app">
+            <p style="position: absolute; top: 30vh; width: 100%; text-align: center"><i class="fas fa-spin fa-spinner"></i> Загрузка...</p>
+        </div>
+    </app>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
