--- a/Sunduk.PWA/wwwroot/index.html
+++ b/Sunduk.PWA/wwwroot/index.html
@@ -13,14 +13,14 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
 </head>
 
-<body>
+<body style="background: #32333d">
     <app>
         <div id="app">
-            <p style="position: absolute; top: 30vh; width: 100%; text-align: center"><i class="fas fa-spin fa-spinner"></i> Загрузка...</p>
+            <p style="position: absolute; top: 30vh; width: 100%; text-align: center"><i style="color: #FF5722; font-size: 35px;" class="fa fa-spinner fa-spin"></i></p>
         </div>
     </app>
 
-    <div id="blazor-error-ui">
+    <div id="blazor-error-ui" style="color: black">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
