--- a/Sunduk.PWA/wwwroot/index.html
+++ b/Sunduk.PWA/wwwroot/index.html
@@ -110,8 +110,8 @@
     </app>
 
     <div id="blazor-error-ui" style="color: black">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
+        Произошла ошибка. 
+        <a href="" class="reload" style="color: black">Перезагрузить приложение.</a>
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
