--- a/Sunduk.PWA/wwwroot/index.html
+++ b/Sunduk.PWA/wwwroot/index.html
@@ -88,6 +88,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="yandex-verification" content="6b4ff79ab0dcccd4" />
     <title>Sunduk</title>
     <base href="/" />
     <link href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" rel="stylesheet">
