исправил опечатку в направлении угла на фаске

--- a/Sunduk.PWA/wwwroot/index.html
+++ b/Sunduk.PWA/wwwroot/index.html
@@ -105,7 +105,7 @@
         <div id="app">
 
             <p style="position: absolute; top: 30vh; width: 100%; text-align: center">
-                <img src="/v.svg" class="logo" />
+                <img src="/icon-512.png" class="logo" />
             </p>
         </div>
     </app>
