версия, описание и все такое

--- a/Sunduk.PWA/wwwroot/index.html
+++ b/Sunduk.PWA/wwwroot/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <style>
     .logo {
         width: 75px;
@@ -89,6 +90,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="yandex-verification" content="6b4ff79ab0dcccd4" />
+    <meta name="keywords" content="Sunduk, Сундук, ЧПУ, Калькулятор" />
+    <meta name="description" content="ЧПУ Калькулятор. Пересчет координат, режимов резания. Расчеты элементов контура с учетом инструмента. Шаблоны управляющих программ." />
+
     <title>Sunduk</title>
     <base href="/" />
     <link href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" rel="stylesheet">
