--- a/Sunduk.PWA/wwwroot/index.html
+++ b/Sunduk.PWA/wwwroot/index.html
@@ -90,10 +90,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="yandex-verification" content="6b4ff79ab0dcccd4" />
-    <meta name="keywords" content="Sunduk, Сундук, ЧПУ, Калькулятор" />
-    <meta name="description" content="ЧПУ Калькулятор. Пересчет координат, режимов резания. Расчеты элементов контура с учетом инструмента. Шаблоны управляющих программ." />
+    <meta name="keywords" content="sunduk, сундук, чпу, калькулятор, всякая хрень, сундук калькулятор, сундук чпу, sunduk cnc, sunduk чпу, sunduk калькулятор, чпу расчеты" />
+    <meta name="description" content="Всякие полезные штуки для ЧПУ. Пересчеты координат, режимов резания, углов. Расчеты элементов контура с учетом инструмента. Шаблоны управляющих программ." />
 
-    <title>Sunduk</title>
+    <title>Sunduk - Всякие полезные штуки для ЧПУ</title>
     <base href="/" />
     <link href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
