улучшил примеры проточки под резьбу

--- a/Sunduk.PWA/wwwroot/index.html
+++ b/Sunduk.PWA/wwwroot/index.html
@@ -91,9 +91,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="yandex-verification" content="6b4ff79ab0dcccd4" />
     <meta name="keywords" content="sunduk, сундук, чпу, калькулятор, всякая хрень, сундук калькулятор, сундук чпу, sunduk cnc, sunduk чпу, sunduk калькулятор, чпу расчеты" />
-    <meta name="description" content="Всякие полезные штуки для ЧПУ. Пересчеты координат, режимов резания, углов. Расчеты элементов контура с учетом инструмента. Шаблоны управляющих программ." />
+    <meta name="description" content="Всякая хрень для ЧПУ. Пересчеты координат, режимов резания, углов. Расчеты элементов контура с учетом инструмента. Шаблоны управляющих программ." />
 
-    <title>Sunduk - Всякие полезные штуки для ЧПУ</title>
+    <title>Sunduk - Всякая хрень для ЧПУ</title>
     <base href="/" />
     <link href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
