--- a/Sunduk.PWA/wwwroot/index.html
+++ b/Sunduk.PWA/wwwroot/index.html
@@ -100,6 +100,10 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Saira+Stencil+One&display=swap" rel="stylesheet">
+    <!-- Blazor.Common | Required CSS -->
+    <link href="_content/Blazor.Common/blazorCommon.css" rel="stylesheet" />
+    <!-- Blazor.Text.Editor | Required CSS -->
+    <link href="_content/Blazor.Text.Editor/blazorTextEditor.css" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css?v=1" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
@@ -123,6 +127,10 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js?v=1"></script>
+    <!-- Blazor.Common | Required CSS -->
+    <script src="_content/Blazor.Common/blazorCommon.js"></script>
+    <!-- Blazor.Text.Editor | Required CSS -->
+    <script src="_content/Blazor.Text.Editor/blazorTextEditor.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 
