фикс (?) оффлайн режима

--- a/Sunduk.PWA/wwwroot/index.html
+++ b/Sunduk.PWA/wwwroot/index.html
@@ -126,12 +126,13 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js?v=1"></script>
     <!-- Blazor.Common | Required CSS -->
     <script src="_content/Blazor.Common/blazorCommon.js"></script>
     <!-- Blazor.Text.Editor | Required CSS -->
     <script src="_content/Blazor.Text.Editor/blazorTextEditor.js"></script>
-    <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script>navigator.serviceWorker.register('service-worker.js', { updateViaCache: 'none' });</script>
 </body>
 
 </html>
