--- a/Sunduk.PWA/wwwroot/index.html
+++ b/Sunduk.PWA/wwwroot/index.html
@@ -106,7 +106,7 @@
     <link href="_content/Blazor.Text.Editor/blazorTextEditor.css" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css?v=1" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="manifest.json" rel="manifest" />
+    <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
 </head>
 
